# Dexonomy

./: .gitignore  .gitmodules  README.md  README_ADMM.md  copy.sh  copy_selected.sh  copy_succ.sh  download_dataset.py  mesh_viewer.sh  pyproject.toml  select_assets.py  select_random.py  selected_DGN.txt  selected_folders.txt  selected_objaverse.txt
assets/hand/: attach.py
assets/hand/allegro/: anno_keypoint.yaml  body_group.yaml  (+1 more)
dexonomy/: kill.py  main.py  script.py  script_admm.py  stop.py  update_kp.py
dexonomy/config/: base.yaml
dexonomy/data/: hand_loader.py  obj_loader.py
dexonomy/op/: __init__.py  compute_stats.py  convert_template.py  eval_data.py  gen_grasp.py  gen_grasp_admm.py  gen_init.py  gen_traj.py  vis_3d.py  vis_usd.py
dexonomy/qp/: qp_batched.py  qp_single.py
dexonomy/sim/: __init__.py  basic.py  mujoco_env.py  mujoco_util.py
dexonomy/task/: __init__.py  anno2temp.py  init_object_align.py  statistic.py  syn_hand_refine.py  syn_object_align.py  syn_test.py  test.py  vis_3d.py  vis_usd.py
dexonomy/util/: file_util.py  hand_loader.py  mujoco_util.py  np_rot_util.py  np_util.py  obj_loader.py  qp_batched.py  qp_single.py  torch_rot_util.py  torch_util.py  traj_util.py  usd_helper.py  usd_util.py  vis_util.py  warp_util.py
experiment/: diffqp.py  diffqp_cvx.py  diffqp_v1.py  loader.py  loader_jy.py  loss_qp.py  main.py  main_admm.py  main_admm_cpu.py  main_admm_cvx.py  main_admm_no_init.py  opt.usd  qp_data.pt  qp_solver.py  scalene-profile.html  scalene-profile.json  scene.json  scene.npz  sim_mujoco.py  test_diff_trimesh.py  test_normal_grad.py  test_proj.py  test_proj.usd  test_proj_mj.py  test_reluqp.py  test_reluqp_official.py  test_sim.py
experiment/config/: base.yaml
experiment/utils/: import_mjcf_custom.py  log_util.py  vis_util.py  warp_util.py
getting_started/: 1_annotation_tutorial.md  2_running_tutorial.md  3_ADMM.md
results/eval/: eval.py
script/: ablation.sh  copy_mesh.sh  exp_A.sh  fix_scale_shadow.sh  mesh_viewer.py  mesh_viewer_colored.py  mesh_viewer_merged.py  run_dexonomy.sh  run_single.sh  run_stat.sh  run_syn.sh  run_test.sh  run_test_100.sh  test_01_26.sh  test_01_27.sh  test_01_28.sh  test_01_29.sh  test_02_06.sh  test_dexonomy_small.sh  test_learning.sh  vis_harder.sh
(+180 files in other folders)
