[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexonomy"
description = "Dexonomy: Synthesizing All Dexterous Grasp Types in a Grasp Taxonomy"
version = "0.1"
authors = [{name = "Jiayi Chen", email = "jiayichen@pku.edu.cn"}]
dependencies = [
    "numpy==1.26.4",
    "warp-lang==1.6.2",
    "mujoco==3.2.6",
    "trimesh[easy]==4.5.3",
    "matplotlib==3.8.0",
    "imageio==2.37.0",
    "qpsolvers[clarabel]==4.5.0",
    "transforms3d==0.4.2",
    "hydra-core==1.3.2",
    "usd-core==25.2",
    "ruamel.yaml==0.18.10",
]

[project.optional-dependencies]
cuda = ["pytorch>=2.0.1"]

[tool.setuptools]
packages = ["dexonomy"]
